--- a/public/homepage/css/custom.css
+++ b/public/homepage/css/custom.css
@@ -93,8 +93,8 @@
 }
 
 .circle-tile-number {
-    font-size: 20px;
-    font-weight: 700;
+    font-size: 18px;
+    padding-left: 30%;
 }
 
 .box {
@@ -109,13 +109,14 @@
 }
 .circle-tile-number,
 .circle-tile-description {
-    font-family:ccursiveportant;
+    font-family:cursive !important;
+    font-weight: 600;
 }
 
 .circle-tile-description {
-    font-weight: bold;
     color: black;
     text-align: center;
+    font-size:16px;
 }
 .text-margin-left {
     margin-left: 25px;
@@ -140,7 +141,7 @@
 }
 
 .brand-card-header {
-    height: 3rem;
+    height: 2.5rem;
     border-radius: 0.5rem 0.5rem 0 0;
     border-bottom: 1px solid #e0e0e0;
 }
